United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 7090654 nightly failures after 7086585
7090654 : nightly failures after 7086585

Details
Type:
Bug
Submit Date:
2011-09-14
Status:
Closed
Updated Date:
2011-11-28
Project Name:
JDK
Resolved Date:
2011-11-28
Component:
hotspot
OS:
solaris_10
Sub-Component:
compiler
CPU:
x86
Priority:
P3
Resolution:
Fixed
Affected Versions:
hs22
Fixed Versions:
hs22

Related Reports
Backport:
Backport:
Relates:

Sub Tasks

Description
#
# A fatal error has been detected by the Java Runtime Environment:
#
#  Internal Error (/tmp/jprt/P3/213607.kvn/source/src/share/vm/classfile/classFileParser.hpp:169), pid=31587, tid=140248113252096
#  fatal error: Invalid constant pool index %u for field name in class file %s
#
# JRE version: 7.0-b147
# Java VM: Java HotSpot(TM) 64-Bit Server VM (22.0-b04-internal-201109132136.kvn.7089632-fastdebug compiled mode linux-amd64 compressed oops)
# Failed to write core dump. Core dumps have been disabled. To enable core dumping, try "ulimit -c unlimited" before starting Java again
#
# If you would like to submit a bug report, please visit:
#   http://bugreport.sun.com/bugreport/crash.jsp
#

and some other failures that looks like this:

[2011-09-14T06:35:30.96] # ERROR: ReferenceType.getValues() returned too small fields list:
[2011-09-14T06:35:30.96] # ERROR:    connector:    sun.jvm.hotspot.jdi.SAPIDAttachingConnector
[2011-09-14T06:35:30.96] # ERROR:    fields count: 4
[2011-09-14T06:35:30.96] # ERROR:    expected:     23
[2011-09-14T06:35:30.96] # ERROR: ArrayReference.getValues() returned unexpected ArrayReference value:
[2011-09-14T06:35:30.96] # ERROR:    field name: arrPrimArrShort
[2011-09-14T06:35:30.96] # ERROR:    signature:  [[S
[2011-09-14T06:35:30.96] # ERROR:    array obj:  instance of short[][2] (id=3)
[2011-09-14T06:35:30.96] # ERROR:    length:     2
[2011-09-14T06:35:30.96] # ERROR:    index:      0
[2011-09-14T06:35:30.96] # ERROR:    got value:  instance of short[3] (id=5)
[2011-09-14T06:35:30.96] # ERROR:    expected:   (ArrayReference)null
[2011-09-14T06:35:30.96] # ERROR: ArrayReference.getValues() returned unexpected ArrayReference value:
[2011-09-14T06:35:30.96] # ERROR:    field name: arrGenArrObject
[2011-09-14T06:35:30.96] # ERROR:    signature:  [Ljava/lang/Object;
[2011-09-14T06:35:30.96] # ERROR:    array obj:  instance of java.lang.Object[3] (id=4)
[2011-09-14T06:35:30.96] # ERROR:    length:     3
[2011-09-14T06:35:30.96] # ERROR:    index:      0
[2011-09-14T06:35:30.96] # ERROR:    got value:  instance of java.lang.Object[2] (id=6)
[2011-09-14T06:35:30.96] # ERROR:    expected:   (ArrayReference)null
[2011-09-14T06:35:30.96] # ERROR: ArrayReference.getValues() returned unexpected ArrayReference value:
[2011-09-14T06:35:30.96] # ERROR:    field name: arrGenArrObject
[2011-09-14T06:35:30.96] # ERROR:    signature:  [Ljava/lang/Object;
[2011-09-14T06:35:30.96] # ERROR:    array obj:  instance of java.lang.Object[3] (id=4)
[2011-09-14T06:35:30.96] # ERROR:    length:     3
[2011-09-14T06:35:30.96] # ERROR:    index:      1
[2011-09-14T06:35:30.96] # ERROR:    got value:  instance of java.lang.String[][3] (id=7)
[2011-09-14T06:35:30.96] # ERROR:    expected:   (ArrayReference)null

                                    

Comments
EVALUATION

See main CR
                                     
2011-09-24
EVALUATION

http://hg.openjdk.java.net/hsx/hotspot-comp/hotspot/rev/35c656d0b685
                                     
2011-09-15
EVALUATION

7090654: nightly failures after 7086585
Reviewed-by: kvn

I had made late changes to accessing of fields in InstanceKlass and
didn't rerun my tests so I create a mismatch between the indexing.
Some code was using i * 7 and others was using i.  I've corrected it
so it's using i consistently everything.  Tested with sajdi.

I screwed up the new of fields when we recreate a .class file from our
internal representation.  It should be unscaled.  Tested with
java/lang/instrument regression tests.  I had thought the tests I
originally ran exercised this path but I was wrong.
                                     
2011-09-15



Hardware and Software, Engineered to Work Together