7090654: nightly failures after 7086585

Reviewed-by: kvn